# LibreFolio

./: .coveragerc  .env.example  .gitattributes  .gitignore  404.html  CHANGELOG.md  Dockerfile  FORK_AUDIT_AND_ROADMAP.md  PROJECT_STATUS_RECAP.md  Pipfile  README.md  TODO_Completati.md  TODO_FUTURI.md  TODO_ProssimeAttivita.md  commit-message.md  dev.py  dev.sh  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  sitemap.xml  test_runner.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  idea.yml  plugin_request.yml
.github/instructions/: backend.instructions.md  frontend.instructions.md  mkdocs.instructions.md
.github/workflows/: release.yml  (+1 more)
LibreFolio_devWiki/: SCHEMA.md  index.md  log.md
LibreFolio_developer_journal/: NOTE_donation_popup_deploy.md
POC_UX/: index.html
admin/: index.html
credits-legal/: index.html
developer/: index.html
docs/: CODE_CLEANUP_PLAN.md  E2E_TESTING_GUIDE.md  QUICK_E2E_TEST.md  README.md  TEST_STANDARDIZATION_PLAN.md  alembic-guide.md  api-development-guide.md  database-schema.md  fx-implementation.md  testing-environment.md  testing-guide.md
es/: index.html
faq/: index.html
financial-calculations/: index.html
financial-theory/: index.html
fr/: index.html
frontend/: .prettierignore  .prettierrc  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
gallery/: index.html
graphify-out/: .graphify_chunk_02.json
it/: index.html
javascripts/: app-sync.js  dashboard-check.js  gallery-img-loader.js  gallery-lang-selector.js  lib-loader.js  mermaid.mjs  site-lang-selector.js
mkdocs_src/: backend_documentation_audit.md  documentation_plan.md  mkdocs.yml  seo_plan.md  skill_agent_note.md
scripts/: cli_base.py  coverage_analysis.py  test_runner.py  update_js_cache.py
search/: search_index.json
static/: extra.css
stylesheets/: home-custom.css
user/: index.html
(+3177 files in other folders)
